5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1595_1014.log
== TEST (2019-03-29 02:18:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("Insira o valor do total de vendas"))
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 02:20:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("Insira o valor do total de vendas:")
porcentagem:0.3
lucro=vendas*porcentagem
-- ERROR:
File "XXXX", line 5
    porcentagem:0.3
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 02:21:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("Insira o valor do total de vendas:")
porcentagem=0.3
lucro=vendas*porcentagem
print(lucro)
-- EXECUTION TIME:
0.221315
-- ERROR:
  File "/home/codebench/codes/1595/1014/main.py", line 5
    porcentagem=0.3
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 02:21:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("Insira o valor do total de vendas:")
porcentagem= 0.3
lucro=vendas*porcentagem
print(lucro)
-- EXECUTION TIME:
0.194298
-- ERROR:
  File "/home/codebench/codes/1595/1014/main.py", line 5
    porcentagem= 0.3
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 02:21:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("Insira o valor do total de vendas:")
porcentagem= 0.3
lucro=vendas*porcentagem
print(lucro)
-- EXECUTION TIME:
0.11983
-- ERROR:
  File "/home/codebench/codes/1595/1014/main.py", line 5
    porcentagem= 0.3
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 02:21:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("Insira o valor do total de vendas:")
porcentagem= 0.3
lucro=vendas*porcentagem
print(lucro)
-- EXECUTION TIME:
0.164345
-- ERROR:
  File "/home/codebench/codes/1595/1014/main.py", line 5
    porcentagem= 0.3
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 02:21:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("Insira o valor do total de vendas:")
porcentagem= 0.3
lucro=vendas*porcentagem
print(lucro)
-- EXECUTION TIME:
0.14087
-- ERROR:
  File "/home/codebench/codes/1595/1014/main.py", line 5
    porcentagem= 0.3
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 02:21:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("Insira o valor do total de vendas:")
porcentagem= 0.3
lucro=vendas*porcentagem
print(lucro)
-- ERROR:
File "XXXX", line 5
    porcentagem= 0.3
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 02:21:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("Insira o valor do total de vendas:")
porcentagem= 0.3
lucro=vendas*porcentagem
print(lucro)
-- EXECUTION TIME:
0.184996
-- ERROR:
  File "/home/codebench/codes/1595/1014/main.py", line 5
    porcentagem= 0.3
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 02:21:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("Insira o valor do total de vendas:")
porcentagem= 0.3
lucro= vendas*porcentagem
print(lucro)
-- EXECUTION TIME:
0.150656
-- ERROR:
  File "/home/codebench/codes/1595/1014/main.py", line 5
    porcentagem= 0.3
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 02:21:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("Insira o valor do total de vendas:")
porcentagem= 0.3
lucro= vendas*porcentagem
print(lucro)
-- EXECUTION TIME:
0.16006
-- ERROR:
  File "/home/codebench/codes/1595/1014/main.py", line 5
    porcentagem= 0.3
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 02:21:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("Insira o valor do total de vendas:")
porcentagem= 0.3
lucro= vendas*porcentagem
print(lucro)
-- EXECUTION TIME:
0.12288
-- ERROR:
  File "/home/codebench/codes/1595/1014/main.py", line 5
    porcentagem= 0.3
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 02:21:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("Insira o valor do total de vendas:")
porcentagem= 0.3
lucro= vendas*porcentagem
print(lucro)
-- EXECUTION TIME:
0.164203
-- ERROR:
  File "/home/codebench/codes/1595/1014/main.py", line 5
    porcentagem= 0.3
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 02:21:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("Insira o valor do total de vendas:")
porcentagem= 0.3
lucro= vendas*porcentagem
print(lucro)
-- EXECUTION TIME:
0.182417
-- ERROR:
  File "/home/codebench/codes/1595/1014/main.py", line 5
    porcentagem= 0.3
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 02:21:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("Insira o valor do total de vendas:")
porcentagem= 0.3
lucro= vendas*porcentagem
print(lucro)
-- EXECUTION TIME:
0.265648
-- ERROR:
  File "/home/codebench/codes/1595/1014/main.py", line 5
    porcentagem= 0.3
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 02:21:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("Insira o valor do total de vendas:")
porcentagem= 0.3
lucro= vendas*porcentagem
print(lucro)
-- EXECUTION TIME:
0.333323
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/1014/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 02:21:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("Insira o valor do total de vendas:")
porcentagem= 0.3
lucro= vendas*porcentagem
print(lucro)
-- EXECUTION TIME:
0.326474
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/1014/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 02:21:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("Insira o valor do total de vendas:")
porcentagem= 0.3
lucro= vendas*porcentagem
print(lucro)
-- EXECUTION TIME:
0.31668
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/1014/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 02:21:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("Insira o valor do total de vendas:")
porcentagem= 0.3
lucro= vendas*porcentagem
print(lucro)
-- EXECUTION TIME:
0.314909
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/1014/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 02:22:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("Insira o valor do total de vendas:"))
porcentagem= 0.3
lucro= vendas*porcentagem
print(lucro)
-- EXECUTION TIME:
0.1163
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:46:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("Insira o valor do total de vendas:"))
porcentagem= 0.3
lucro= vendas*porcentagem
print(lucro)
-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
